--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
+    "@types/pg": "^8.11.10",
     "@types/sharp": "^0.32.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
+    "pg": "^8.13.1",
     "sharp": "^0.33.5"
   }
 }
